nenolod     2006/01/08 22:33:36 UTC	(20060108-4535)
  Log:
  Use *@host if given a nick, instead of user@host when AKILLing. It seems much more intutive this way...
  

  Changes:	Modified:
  +4 -4		trunk/modules/operserv/akill.c (File Modified) 


nenolod     2006/01/07 17:24:23 UTC	(20060107-4533)
  Log:
  Blank out the contents of helpentry_t before we plug it in with information.
  malloc() does not give us zero'ed out memory by default; however the block
  allocator does. Resolves crashes dealing with module-provided help.
  

  Changes:	Modified:
  +2 -0		trunk/src/help.c (File Modified) 


pfish       2006/01/07 10:05:23 UTC	(20060107-4531)
  Log:
  - Formatting change to match AKILL LIST
  - Show the settime in a nice way instead of using epoch time
  

  Changes:	Modified:
  +8 -3		trunk/modules/operserv/ignore.c (File Modified) 


nenolod     2006/01/07 02:17:39 UTC	(20060107-4529)
  Log:
  SolidIRCd protocol support, provided by sheik@solid-ircd.com.
  

  Changes:	Modified:
  +35 -2	trunk/include/pmodule.h (File Modified) 
  + -		trunk/include/protocol/solidircd.h (File Added) 
  +1 -0		trunk/protocol/Makefile.in (File Modified) 
  +828 -0	trunk/protocol/solidircd.c (File Added) 


pfish       2006/01/07 00:28:17 UTC	(20060107-4527)
  Log:
  - Grammar fix
  - Expand AKILL why to show what mask is matching.
  

  Changes:	Modified:
  +10 -26	trunk/modules/chanserv/why.c (File Modified) 


pfish       2006/01/06 11:31:57 UTC	(20060106-4525)
  Log:
  Wait, what was I thinking? Don't allow if channel is closed.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/why.c (File Modified) 


pfish       2006/01/06 11:30:36 UTC	(20060106-4523)
  Log:
  WHY now requires CA_ACLVIEW or PRIV_CHAN_AUSPEX for operoverride
  

  Changes:	Modified:
  +25 -7	trunk/modules/chanserv/why.c (File Modified) 


jilles      2006/01/06 11:22:48 UTC	(20060106-4521)
  Log:
  - Fix error message for invalid conf option in string{}.